# Extrapolation

./: .gitignore  Extrapolation.sln  Invoke-FuturePerformanceEvaluation.ps1  LICENSE  LimitLibrary.psm1  Nuget.config  README.md  generate-complete-limit.ps1  get-limit-results-as-table.ps1  junk.csv  junk1.csv  setuplxplus.sh  start_Extrapolation.bat  submit-limit-parameter-exploration.ps1
CommonLimitUtils/: CommonLimitUtils.vcxitems  variable_binning_builder.h
ExtrapLimitFinder/: ExtrapLimitFinder.vcxproj  ExtrapLimitFinder.vcxproj.filters  Makefile  brasilianFlag.C  main.cxx  packages.config
ExtrapolateByBeta/: ExtrapolateByBeta.vcxproj  ExtrapolateByBeta.vcxproj.filters  Invoke-ExtrapolationTest.ps1  Lxy_weight_calculator.cxx  Lxy_weight_calculator.h  Makefile  beta_cache.h  cache_object.h  caching_tlz.h  doubleError.h  extrapolate_betaw.cxx  muon_tree_processor.cxx  muon_tree_processor.h  variable_binning_builder.h
FindLimit/: FindLimit.vcxproj  FindLimit.vcxproj.filters  HypoTestInvTool.cxx  Makefile  SimulABCD.h  brasilianFlag.C  main.cxx  packages.config  run_ABCD.cxx
GenerateMCFiles/: CalRSelection.C  CalRSelection2017.C  GenerateMCFiles.csproj  GenerateROOTFiles.py  GenerateROOTFiles2017.py  GeneratorManager.cs  Program.cs  Sample Meta Data.csv  VpionBetaGenerator.cs  packages.config  readVecBool.C
LimitCommonCode/: CalRLJConverter.h  HypoTestInvTool.cxx  HypoTestInvTool.h  LimitCommonCode.vcxitems  SimulABCD.h  extrap_file_wrapper.h  main.cxx  (+7 more)
Wild/Test/: CMakeLists.txt  CommandLine.Test.cpp  CommandLine.Test.vcxproj  CommandLine.Test.vcxproj.filters
(+40 files in other folders)
